--- a/assets/css/apps/mail/cmps/mail-sideNav.css
+++ b/assets/css/apps/mail/cmps/mail-sideNav.css
@@ -1,5 +1,6 @@
 /* side navigation */
 .side-nav {
+    margin-top: 40px;
     width: 270px;
     background-color: white;
     padding: 20px;
@@ -11,14 +12,44 @@
  }
  
  .side-nav li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 12px 0;
     font-size: 14px;
     cursor: pointer;
     transition: background-color 0.2s ease;
- }
- 
- .side-nav li:hover {
+}
+
+.side-nav li:hover {
     background-color: #E8F0FE;
     border-radius: 24px;
     padding-left: 15px;
+}
+
+.side-nav li span {
+    font-weight: bold; 
+}
+
+.filter-option-1 {
+    border-radius: 50px; /* Makes the input round */
+    padding: 10px; /* Optional: Adds padding for a better look */
+    border: 1px solid #ccc; /* Optional: Border styling */
+    outline: none; /* Optional: Removes the default outline on focus */
  }
+ 
+ .filter-option-2 {
+    margin-top: 1px; /* Retains your existing margin */
+    border-radius: 50px; /* Makes the input round */
+    padding: 10px; /* Optional: Adds padding for a better look */
+    border: 1px solid #ccc; /* Optional: Border styling */
+    outline: none; /* Optional: Removes the default outline on focus */
+ }
+
+ .input-list {
+    border-radius: 50px; /* Makes the input round */
+    padding: 10px; /* Optional: Adds padding for a better look */
+    border: 1px solid #ccc; /* Optional: Border styling */
+    outline: none; /* Optional: Removes the default outline on focus */
+ }
+ 
